src/test/ui/borrowck/two-phase-multi-mut.stderr
error[E0499]: cannot borrow `foo` as mutable more than once at a time
  --> $DIR/two-phase-multi-mut.rs:23:16
   |
LL |     foo.method(&mut foo);
   |     -----------^^^^^^^^-
   |     |          |
   |     |          second mutable borrow occurs here
   |     first mutable borrow occurs here
   |     borrow later used here

error[E0499]: cannot borrow `foo` as mutable more than once at a time
  --> $DIR/two-phase-multi-mut.rs:23:5
   |
LL |     foo.method(&mut foo);
   |     ^^^^^^^^^^^--------^
   |     |          |
   |     |          first mutable borrow occurs here
   |     second mutable borrow occurs here
   |     borrow later used here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0499`.
